--- a/public/users.html
+++ b/public/users.html
@@ -33,9 +33,9 @@
       `);
     });
 
-    socket.on('disconnect', () => {
-      console.log(`Socket disconnected: ${socket.id}`);
-    });
+    // socket.on('disconnect', () => {
+    //   console.log(`Socket disconnected: ${socket.id}`);
+    // });
 
     // Example: Handle click on user email or socket ID to fetch details
     $(document).on('click', '.user-email, .user-socket-id', function() {
