--- a/public/users.html
+++ b/public/users.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Live Users</title>
-  <link rel="stylesheet" href="./css/style2.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="js/app.js"></script>
@@ -33,9 +33,9 @@
       `);
     });
 
-    // socket.on('disconnect', () => {
-    //   console.log(`Socket disconnected: ${socket.id}`);
-    // });
+    //    socket.on('disconnect', () => {
+    //    console.log(`Socket disconnected: ${socket.id}`);
+    //  });
 
     // Example: Handle click on user email or socket ID to fetch details
     $(document).on('click', '.user-email, .user-socket-id', function() {
