--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,6 @@
             
             <button type="submit">Save</button>
         </form>
-        <center><a href="./users.html">List Of LIVE USERS</a></center>
         <div id="response"></div>
     </div>
 
@@ -68,5 +67,8 @@
             });
         });
     </script>
+    
+    <center><a href="./users.html">Registered USERS</a></center>
+    <center><a href="./liveusers.html">Live USERS</a></center>
 </body>
 </html>
