--- a/public/users.html
+++ b/public/users.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="./css/style2.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="js/app.js"></script>
 </head>
 <body>
   <div class="container">
@@ -18,26 +17,37 @@
     $(document).ready(function() {
         const socket = io();
 
-        socket.on('connect', () => {
-          console.log(`Socket connected: ${socket.id}`);
-          socket.emit('joinLiveUsers');
-        });
+        function fetchUsers() {
+            $.ajax({
+                type: 'GET',
+                url: '/api/read/users',
+                success: function(users) {
+                    console.log('Fetched users:', users);
+                    $('#liveUsersList').empty(); // Clear the list before adding new users
+                    users.forEach(user => {
+                        $('#liveUsersList').append(`
+                            <div class="user">
+                                <p><strong>Email:</strong> <span class="user-email">${user.email}</span></p>
+                                <p><strong>Name:</strong> ${user.firstName} ${user.lastName}</p>
+                                <p><strong>Mobile:</strong> ${user.mobileNo}</p>
+                                <p><strong>Address:</strong> ${user.address.street}, ${user.address.city}, ${user.address.state}, ${user.address.country}</p>
+                                <p><strong>Login ID:</strong> ${user.loginId}</p>
+                                <p><strong>Live Status:</strong> ${user.isLive ? 'Live' : 'Offline'}</p>
+                            </div>
+                        `);
+                    });
+                },
+                error: function(error) {
+                    console.error('Error fetching users:', error);
+                    $('#liveUsersList').html('<p>Error fetching users. Please try again later.</p>');
+                }
+            });
+        }
 
-        socket.on('userJoined', user => {
-          console.log('User joined:', user);
-          $('#liveUsersList').append(`
-            <div class="user">
-              <p><strong>Email:</strong> <span class="user-email">${user.email}</span></p>
-              <p><strong>Name:</strong> ${user.name}</p>
-              <p><strong>Socket ID:</strong> <span class="user-socket-id">${user.socketId}</span></p>
-            </div>
-          `);
-        });
+        fetchUsers();
 
-        $(document).on('click', '.user-email, .user-socket-id', function() {
-          const identifier = $(this).text();
-          // Call your API to fetch user details based on identifier
-          alert('Implement AJAX call to fetch user details');
+        socket.on('userJoined', function(user) {
+            fetchUsers(); // Fetch users again when a new user joins
         });
     });
   </script>
